Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt
QTBUG-61442
MapboxGL Map Parameters do not have effect if added after map creation dynamically
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Done
Priority:
P2: Important
Fix Version/s:
5.10.0 Alpha
Affects Version/s:
5.9.0
Component/s:
Location: Mapbox plugins
Labels:
None
Commits:
e368a651e4ce300df9c42b75841ae31154c49510
Attachments
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Thiago Marcos P. Santos
Reporter:
Paolo Angelelli
Votes:
0
Vote for this issue
Watchers:
1
Start watching this issue
Dates
Created:
15 Jun '17 08:26
Updated:
27 Nov '18 14:05
Resolved:
27 Nov '18 14:05
Gerrit Reviews
There are no open Gerrit changes
Show
There are 2 closed Gerrit changes
Hide
There are 2 closed Gerrit changes
Fix MapParameters not having effect on Mapbox GL if added dynamically
Gerrit Review:
Fix MapParameters not having effect on Mapbox GL if added dynamically
Gerrit Review: