Fix MapParameters not having effect on Mapbox GL if added dynamically

The previous code was not handling the case of MapParameters changing
the style appearance after the style is fully loaded, which happens
when MapParameters are created dynamically at runtime.

[ChangeLog][QtLocation][MapboxGL] Fix MapParameter dynamic usage

Task-number: QTBUG-61442
Change-Id: I64a8a1416dd5f7477297878f42760ad9008382a4
Reviewed-by: Paolo Angelelli <paolo.angelelli@qt.io>